@@ -2,7 +2,6 @@ Changes/Bug fixes
 Allow smat option to apply to more than one level
 Make offset optional for Poisson and Negative-binomial
 Add implementation for predict, residuals, df.residual and fitted methods
-Display hierarchy information in the model output
 Revisit interactions, e.g. the following doesn't work: formula=log(obs,logexp)~(0|nation[]+nation[]:uvbi)+(2|cons)
 Revisit cross-classification specification as this should apply to the whole model, rather than level by level
 Allow specification of all ID/Weight columns instead of assuming they are consecutive
